fixed an issue where images would not load if the browser-width and browser-height were too small

--- a/art/style.css
+++ b/art/style.css
@@ -36,12 +36,12 @@ h1 {
   max-height: 100%;
   margin: auto;
 }
-.byebye {
+/*.byebye {
   opacity: 0;
 }
 .byebye:hover {
   transform: scale(0.2) !important;
-}
+} */
 .gallery {
   display: grid;
   grid-column-gap: 8px;
